Fix shifted toolbar in threads

--- a/theme/fixedsource.css
+++ b/theme/fixedsource.css
@@ -4688,7 +4688,7 @@ html #app-mount .userPopout-2VyFj_ .avatarPositionPremiumNoBanner-nWzERs {
 
 .chat-2ZfjoI.threadSidebarOpen-1LSXvU,
 .threadSidebar-1o3BTy {
-    border-radius: 0
+    overflow: hidden !important;
 }
 
 .container-3i3IzO {
@@ -5704,17 +5704,11 @@ button[class^=attachButton] {
 }
 
 .container-ZMc96U.themed-Hp1KC_ {
-    width: 100vw;
-    margin-left: calc(-1 * var(--memberlist-width));
+    width: 100%;
     padding-top: 0;
     padding-right: 8px;
     padding-bottom: 0;
-    padding-left: calc(8px + var(--memberlist-width));
     transition: padding var(--memberlist-anim-speed) var(--memberlist-anim-ease)
-}
-
-.threadSidebarOpen-1LSXvU .container-ZMc96U.themed-Hp1KC_ {
-    width: calc(100vw - 29vw)
 }
 
 .threadSidebar-1o3BTy .container-ZMc96U.themed-Hp1KC_ {
